--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
                             <li class="menu-item">
                                 <a href="book.html">The Book <small>Donate Today</small></a>
                             </li>
-                            <li class="menu-item">
-                                <a href="#contact">Contact <small>We Want To Hear From You</small></a>
-                            </li>
 						</ul>
 					</div>
 
@@ -269,17 +266,17 @@
 		<script src="js/app.js"></script>
         <script type="text/javascript">
             $(document).ready(function(){
-                $(document).snow({ SnowImage: "images/floatingfrog.gif", Quantity: 20 });
+                //$(document).snow({ SnowImage: "images/floatingfrog.gif", Quantity: 20 });
 
                 // Countdown Timer
-                var start = new Date();
+                var start = new Date(2012, 1, 23); 
                 var daysToAdd = 5;
 
                 if (window.location.hash) {
                     daysToAdd = parseInt(window.location.hash.split('#')[1]);
                 }
 
-                var end = new Date();
+                var end = new Date(start);
                 end.setDate(start.getDate() + daysToAdd);
                 // Set 8pm
                 end.setHours(20);
