--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div class="site-content">
 		<header class="site-header">
 			<div class="container">
-				<a href="#" class="branding">
+				<a class="branding">
 					<img src="images/angel.png" alt="" class="logo">
 					<h1 class="site-title">Church of the Passover Angel</h1>
 				</a>
@@ -91,48 +91,6 @@
 		<main class="main-content">
 			<div class="fullwidth-block">
 				<div class="container">
-					<h2 class="section-title">Recent news</h2>
-
-					<div class="row">
-						<div class="col-md-3 col-sm-6">
-							<div class="news">
-								<image class="news-image" src="images/news-thumb-1.jpg"></image>
-								<h3 class="news-title"><a href="sermons.html#sermonOne">The Sun Darkens</a></h3>
-								<small class="date"><i class="fa fa-calendar"></i>14 aug <span
-										class="year-0"></span></small>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6">
-							<div class="news">
-								<image class="news-image" src="images/news-thumb-2.jpg"></image>
-								<h3 class="news-title"><a href="sermons.html#sermonTwo">Satan’s Control of U.S.
-										Government</a></h3>
-								<small class="date"><i class="fa fa-calendar"></i>24 mar <span
-										class="year-0"></span></small>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6">
-							<div class="news">
-								<image class="news-image" src="images/news-thumb-3.jpg"></image>
-								<h3 class="news-title"><a href="sermons.html#sermonThree">Angels of Vengeance</a></h3>
-								<small class="date"><i class="fa fa-calendar"></i>01 jan <span
-										class="year-0"></span></small>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6">
-							<div class="news">
-								<image class="news-image" src="images/news-thumb-4.jpg"></image>
-								<h3 class="news-title"><a href="sermons.html#sermonFour">New World Disorder</a></h3>
-								<small class="date"><i class="fa fa-calendar"></i>25 jul <span
-										class="year-1"></span></small>
-							</div>
-						</div>
-					</div> <!-- .row -->
-				</div> <!-- .container -->
-			</div> <!-- section -->
-
-			<div class="fullwidth-block">
-				<div class="container">
 					<div class="row">
 						<div class="col-md-6">
 							<h2 class="section-title">Ways To Prepare</h2>
@@ -141,7 +99,7 @@
 									<a href="http://www.hardenedstructures.com/genesisseries.php">
 										<h3 class="event-title">Genesis Series Shelters</h3>
 										<span class="event-meta">
-											<span><i class="fa fa-calendar"></i>30 mar <span
+											<span><i class="fa fa-calendar"></i>01 Feb <span
 													class="year-0"></span></span>
 										</span>
 									</a>
@@ -151,7 +109,7 @@
 										href="http://graywolfsurvival.com/95815/best-prepper-resources-and-recommendations-feb-2015/">
 										<h3 class="event-title">The Right Stuff</h3>
 										<span class="event-meta">
-											<span><i class="fa fa-calendar"></i>12 feb <span
+											<span><i class="fa fa-calendar"></i>12 Jan <span
 													class="year-0"></span></span>
 										</span>
 									</a>
@@ -196,9 +154,6 @@
 								</li>
 							</ul>
 
-							<div class="text-center">
-								<a href="#" class="button">More Ways To Prepare</a>
-							</div>
 						</div>
 						<div class="col-md-6">
 							<h2 class="section-title">Previous sermons</h2>
@@ -241,9 +196,6 @@
 								</li>
 							</ul>
 
-							<div class="text-center">
-								<a href="sermons.html" class="button">See all sermons</a>
-							</div>
 						</div>
 					</div> <!-- .row -->
 				</div> <!-- .container -->
