--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 					<div class="col-md-4">
 						<div class="widget">
 							<h3 class="widget-title"><a name="contact">Contact form</a></h3>
-							<form action="#" class="contact-form">
+							<form action="" class="contact-form">
 								<div class="row">
 									<div class="col-md-6"><input type="text" placeholder="Your name..."></div>
 									<div class="col-md-6"><input type="text" placeholder="Email..."></div>
