--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<button class="menu-toggle"><i class="fa fa-bars"></i> Menu</button>
 					<ul class="menu">
 						<li class="menu-item current-menu-item">
-							<a href="index.html">Homepage <small>Lorem ipsum</small></a>
+							<a href="index.html">Homepage <small>The Angel Cometh</small></a>
 						</li>
 						<li class="menu-item">
 							<a href="about.html">About Us <small>About Our Church</small></a>
