--- a/index.html
+++ b/index.html
@@ -255,28 +255,50 @@
 	<script src="js/app.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
-			//$(document).snow({ SnowImage: "images/floatingfrog.gif", Quantity: 20 });
+			// $(document).snow({ SnowImage: "images/floatingfrog.gif", Quantity: 20 });
 
-			// Countdown Timer
-			var start = new Date(2012, 1, 23);
+			// --- Persistent countdown across pages (per visitor) ---
+			// Base demo "start" used by the original template:
+			var start = new Date(2012, 1, 23); // (Feb 23, 2012)
 			var daysToAdd = 5;
 
+			// Allow overriding by hash (e.g., index.html#7)
 			if (window.location.hash) {
-				daysToAdd = parseInt(window.location.hash.split('#')[1]);
+				var n = parseInt(window.location.hash.slice(1), 10);
+				if (!isNaN(n)) daysToAdd = n;
 			}
 
+			// Build the "end" moment (8:00 PM on start + daysToAdd)
 			var end = new Date(start);
 			end.setDate(start.getDate() + daysToAdd);
-			// Set 8pm
-			end.setHours(20);
-			end.setMinutes(0);
+			end.setHours(20, 0, 0, 0);
 
-			var diff = Math.floor((end.getTime() - start.getTime()) / 1000);
+			// Remember when this visitor first opened the site for this duration
+			var KEY = "angel_first_open_ts_" + daysToAdd; // per-length key
+			var firstOpen = localStorage.getItem(KEY);
+			if (!firstOpen) {
+				firstOpen = Date.now();
+				localStorage.setItem(KEY, String(firstOpen));
+			} else {
+				firstOpen = parseInt(firstOpen, 10) || Date.now();
+			}
 
-			var clock = $('.countdown').FlipClock(diff, {
-				clockFace: 'DailyCounter',
-				countdown: true,
-			});
+			// How long have they had the site open, across navigations?
+			var elapsedSec = Math.floor((Date.now() - firstOpen) / 1000);
+
+			// Adjust the fixed demo "start" by elapsed seconds so the diff shrinks
+			var adjustedStart = new Date(start.getTime() + elapsedSec * 1000);
+
+			// Remaining time (never below zero)
+			var diff = Math.max(0, Math.floor((end.getTime() - adjustedStart.getTime()) / 1000));
+
+			// Initialize FlipClock with the remaining seconds
+			if ($(".countdown").length) {
+				$(".countdown").FlipClock(diff, {
+					clockFace: "DailyCounter",
+					countdown: true
+				});
+			}
 		});
 	</script>
 </body>
